--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ MarkupSafe==3.0.3
 packaging==25.0
 passlib==1.7.4
 pluggy==1.6.0
+psutil==6.1.1
 psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pycparser==2.23
