refactor: Migrate image storage from Base64/LargeBinary to file system
- Add storage module with configurable UPLOADS_PATH for persistent file storage
- Replace LargeBinary columns with String paths in models (subgrupo, membro, publicacao)
- Add /api/v1/files endpoint to serve static images with HTTP caching
- Update schemas to return URLs instead of Base64 encoded data
- Add aiofiles dependency for async file operations
- Add migration script to update database schema
- Update tests for new response format
- Add .env.example with configuration documentation

Performance improvements:
- Database size reduced (no more binary blobs)
- HTTP caching enabled (1 year cache headers)
- Reduced memory usage on API responses

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ __pycache__/
 # 5. Arquivos gerados pelo SO
 # Cache de miniaturas do Windows
 Thumbs.db
+
+# 6. Uploads de arquivos (imagens)
+# Pasta onde as imagens são armazenadas localmente
+uploads/
