--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,31 +3,37 @@ version: '3.8'
 
 services:
   app:
-    build: .  # Constrói a imagem usando o Dockerfile na pasta atual (.)
-    container_name: python-gem-app
+    build: .
+    container_name: gem-api
     restart: unless-stopped
     expose:
-      - "8000" # Expõe a porta 8000 apenas para outros serviços na rede Docker (como o Nginx)
-    # Se sua aplicação precisar de variáveis de ambiente, descomente e crie o arquivo .env
-    # env_file:
-    #   - .env
-    # Se precisar de volumes persistentes (ex: banco de dados, uploads), adicione aqui
-    # volumes:
-    #   - ./dados_persistentes:/code/dados
+      - "8000"
+    env_file:
+      - .env
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+      - SECRET_KEY=${SECRET_KEY}
+      - UPLOADS_PATH=/var/data/uploads
+    volumes:
+      - /var/data/gem-project/uploads:/var/data/uploads
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   nginx:
-    image: nginx:alpine # Imagem leve do Nginx
-    container_name: python-gem-nginx
+    image: nginx:alpine
+    container_name: gem-nginx
     restart: unless-stopped
     ports:
-      - "80:80" # Mapeia a porta 80 do host para a porta 80 do container Nginx
+      - "80:80"
     volumes:
-      # Mapeia o arquivo de configuração local para dentro do container Nginx (read-only)
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
-      - app # Garante que o container 'app' inicie antes do 'nginx'
+      - app
 
-# Você pode definir redes customizadas aqui se necessário
-# networks:
-#   default:
-#     driver: bridge
+networks:
+  default:
+    driver: bridge
