--- a/nginx.conf
+++ b/nginx.conf
@@ -1,28 +1,26 @@
 # Arquivo: nginx.conf
 server {
     listen 80;
-    server_name localhost; # Ou o seu domínio, se tiver um
+    server_name localhost;
+
+    # Tamanho máximo de upload (para imagens)
+    client_max_body_size 10M;
 
     location / {
-        # Redireciona o tráfego para o serviço 'app' (definido no docker-compose)
-        # na porta 8000 (onde a aplicação Python está rodando)
         proxy_pass http://app:8000;
-
-        # Repassa cabeçalhos importantes para a aplicação
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Ajustes opcionais de timeout (aumentar se necessário)
-        # proxy_connect_timeout       600;
-        # proxy_send_timeout          600;
-        # proxy_read_timeout          600;
-        # send_timeout                600;
+        # Timeouts
+        proxy_connect_timeout 60;
+        proxy_send_timeout 60;
+        proxy_read_timeout 60;
     }
 
-    # Opcional: Localização para arquivos estáticos, se houver
-    # location /static {
-    #     alias /path/para/seus/estaticos;
-    # }
+    # Health check endpoint (sem proxy headers extras)
+    location /health {
+        proxy_pass http://app:8000/health;
+    }
 }
